--- a/AAAlertController/Base.lproj/Main.storyboard
+++ b/AAAlertController/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w7G-CS-GHm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w7G-CS-GHm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -45,8 +45,22 @@
                                     <action selector="AlertWithCancelAndOK:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SB5-vD-n2r"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2H3-Ub-Asg">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NQR-h4-WZg">
                                 <rect key="frame" x="171" y="171" width="258" height="35"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="258" id="5t8-Bp-VQD"/>
+                                    <constraint firstAttribute="height" constant="35" id="uZc-dE-IXv"/>
+                                </constraints>
+                                <state key="normal" title="Alert With Three Buttons">
+                                    <color key="titleColor" red="0.0" green="0.057984338640000001" blue="0.1164512435" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="AlertWithThreeButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iJS-27-ZTn"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2H3-Ub-Asg">
+                                <rect key="frame" x="171" y="209" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="2iQ-id-XqO"/>
@@ -60,7 +74,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FM8-v1-cCc">
-                                <rect key="frame" x="171" y="209" width="258" height="35"/>
+                                <rect key="frame" x="171" y="247" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="0Wm-g7-UTm"/>
@@ -74,7 +88,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yI-ME-bgU">
-                                <rect key="frame" x="171" y="247" width="258" height="35"/>
+                                <rect key="frame" x="171" y="285" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="258" id="kaA-TN-nhD"/>
@@ -88,7 +102,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1v-q4-cwm">
-                                <rect key="frame" x="171" y="285" width="258" height="35"/>
+                                <rect key="frame" x="171" y="323" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="258" id="Gk2-9i-CU5"/>
@@ -102,7 +116,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtg-RB-mte">
-                                <rect key="frame" x="171" y="323" width="258" height="35"/>
+                                <rect key="frame" x="171" y="361" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="258" id="JR2-J4-UIn"/>
@@ -116,7 +130,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0N-uZ-t0J">
-                                <rect key="frame" x="171" y="361" width="258" height="35"/>
+                                <rect key="frame" x="171" y="399" width="258" height="35"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.80392156859999997" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="V5L-Dx-ukM"/>
@@ -135,12 +149,14 @@
                             <constraint firstItem="4wO-pu-n7j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1Rj-iW-Y8l"/>
                             <constraint firstItem="c1v-q4-cwm" firstAttribute="top" secondItem="2yI-ME-bgU" secondAttribute="bottom" constant="3" id="31D-11-xwE"/>
                             <constraint firstItem="Z0N-uZ-t0J" firstAttribute="top" secondItem="wtg-RB-mte" secondAttribute="bottom" constant="3" id="4Jb-ms-j3x"/>
+                            <constraint firstItem="NQR-h4-WZg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="98v-8p-Oee"/>
                             <constraint firstItem="2yI-ME-bgU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IMa-Tw-rnm"/>
                             <constraint firstItem="wtg-RB-mte" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kqs-eF-ysJ"/>
                             <constraint firstItem="4wO-pu-n7j" firstAttribute="top" secondItem="pNz-28-2ps" secondAttribute="bottom" constant="3" id="NQb-ee-P8x"/>
-                            <constraint firstItem="2H3-Ub-Asg" firstAttribute="top" secondItem="4wO-pu-n7j" secondAttribute="bottom" constant="3" id="WK0-q7-nLD"/>
                             <constraint firstItem="FM8-v1-cCc" firstAttribute="top" secondItem="2H3-Ub-Asg" secondAttribute="bottom" constant="3" id="Xyv-z9-Y6m"/>
                             <constraint firstItem="2yI-ME-bgU" firstAttribute="top" secondItem="FM8-v1-cCc" secondAttribute="bottom" constant="3" id="atH-aw-wAU"/>
+                            <constraint firstItem="NQR-h4-WZg" firstAttribute="top" secondItem="4wO-pu-n7j" secondAttribute="bottom" constant="3" id="eY9-cz-zC5"/>
+                            <constraint firstItem="2H3-Ub-Asg" firstAttribute="top" secondItem="NQR-h4-WZg" secondAttribute="bottom" constant="3" id="f6l-KE-Jip"/>
                             <constraint firstItem="FM8-v1-cCc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gZY-Mo-coY"/>
                             <constraint firstItem="2H3-Ub-Asg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hDZ-7l-h6N"/>
                             <constraint firstItem="pNz-28-2ps" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mtU-cV-tvh"/>
