--- a/AlertController/AlertController/AlertController.xib
+++ b/AlertController/AlertController/AlertController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlertController" customModule="AlertController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlertController" customModule="AAToast" customModuleProvider="target">
             <connections>
                 <outlet property="cancelButton" destination="ktw-IR-JbA" id="cuN-dH-6KZ"/>
                 <outlet property="cancelButton2" destination="VuU-dE-Dx5" id="PbC-xQ-iTP"/>
