--- a/AlertControllerExample/AlertControllerExample/Base.lproj/Main.storyboard
+++ b/AlertControllerExample/AlertControllerExample/Base.lproj/Main.storyboard
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cnr-Oc-ldb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Cnr-Oc-ldb">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--AAAlertController-->
         <scene sceneID="04Y-eo-GBj">
             <objects>
-                <viewController id="boq-ME-xxP" customClass="ViewController" customModule="AAAlertController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="boq-ME-xxP" customClass="ViewController" customModule="AlertControllerExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IJG-Ep-07s"/>
                         <viewControllerLayoutGuide type="bottom" id="alm-jV-1Up"/>
@@ -153,7 +152,7 @@
                         <constraints>
                             <constraint firstItem="AqA-bN-FIg" firstAttribute="centerX" secondItem="qdS-Ml-vOd" secondAttribute="centerX" id="7UC-yw-DfT"/>
                             <constraint firstItem="bsl-7V-KvV" firstAttribute="top" secondItem="rVn-lU-CX7" secondAttribute="bottom" constant="3" id="7Xj-xP-gX8"/>
-                            <constraint firstItem="J91-aZ-esB" firstAttribute="top" secondItem="chm-5u-gL2" secondAttribute="top" constant="31" id="9Jn-u0-8lE"/>
+                            <constraint firstItem="J91-aZ-esB" firstAttribute="top" secondItem="IJG-Ep-07s" secondAttribute="bottom" constant="31" id="9Jn-u0-8lE"/>
                             <constraint firstItem="Inq-kl-Z45" firstAttribute="centerX" secondItem="qdS-Ml-vOd" secondAttribute="centerX" id="9aN-r5-iEH"/>
                             <constraint firstItem="rVn-lU-CX7" firstAttribute="centerX" secondItem="qdS-Ml-vOd" secondAttribute="centerX" id="MJj-yN-eO4"/>
                             <constraint firstItem="aGs-G5-mSs" firstAttribute="top" secondItem="AqA-bN-FIg" secondAttribute="bottom" constant="3" id="Nf1-3T-MUo"/>
@@ -170,7 +169,6 @@
                             <constraint firstItem="gi3-AR-K8a" firstAttribute="top" secondItem="gFv-zX-vE4" secondAttribute="bottom" constant="3" id="opY-ld-RBb"/>
                             <constraint firstItem="gi3-AR-K8a" firstAttribute="centerX" secondItem="qdS-Ml-vOd" secondAttribute="centerX" id="qay-HC-3RX"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="chm-5u-gL2"/>
                     </view>
                     <navigationItem key="navigationItem" title="AAAlertController" id="Qtf-gV-40r"/>
                 </viewController>
